--- a/settings_windows_terminal.json
+++ b/settings_windows_terminal.json
@@ -1,15 +1,13 @@
 {
     "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
-    "actions": 
-    [
+    "actions": [
         {
             "command": "paste",
             "keys": "ctrl+v"
         },
         {
-            "command": 
-            {
+            "command": {
                 "action": "copy",
                 "singleLine": false
             },
@@ -20,8 +18,7 @@
             "keys": "ctrl+shift+f"
         },
         {
-            "command": 
-            {
+            "command": {
                 "action": "splitPane",
                 "split": "auto",
                 "splitMode": "duplicate"
@@ -33,24 +30,19 @@
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "launchMode": "default",
-    "profiles": 
-    {
-        "defaults": 
-        {
+    "profiles": {
+        "defaults": {
             "colorScheme": "One Half Dark (modded)",
             "experimental.retroTerminalEffect": false,
-            "font": 
-            {
+            "font": {
                 "face": "Source Code Pro"
             },
             "opacity": 50,
             "useAcrylic": true
         },
-        "list": 
-        [
+        "list": [
             {
-                "font": 
-                {
+                "font": {
                     "face": "MesloLGM NF"
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
@@ -59,8 +51,7 @@
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
-                "font": 
-                {
+                "font": {
                     "face": "MesloLGM NF"
                 },
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
@@ -80,8 +71,7 @@
             },
             {
                 "colorScheme": "One Half Dark (ubuntu)",
-                "font": 
-                {
+                "font": {
                     "face": "MesloLGM NF"
                 },
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
@@ -91,8 +81,7 @@
             }
         ]
     },
-    "schemes": 
-    [
+    "schemes": [
         {
             "background": "#0C0C0C",
             "black": "#0C0C0C",
@@ -186,7 +175,8 @@
             "yellow": "#E5C07B"
         },
         {
-            "background": "#012e2e",
+            "background": "#001B26",
+            // "background": "#012e2e",
             "black": "#282C34",
             "blue": "#61AFEF",
             "brightBlack": "#5A6374",
