--- a/.zsrhrc
+++ b/.zsrhrc
@@ -5,13 +5,6 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
-# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
-# Initialization code that may require console input (password prompts, [y/n]
-# confirmations, etc.) must go above this block; everything else may go below.
-#if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-#  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-#fi
-
 
 # Added by `rbenv init` 
 eval "$(rbenv init - --no-rehash zsh)"
@@ -165,19 +158,16 @@ alias vpntest="curl -fsSL www.google.com"
 
 # cd jekyllweb
 alias cdweb="cd ~/Documents/Jekyll_Websites/lengfc09.github.io"
-
+alias webserve="bundle exec jekyll serve"
 
 # map exa commands to normal ls commands
-alias ll="eza -l -g --icons"
-alias ls="eza --icons"
-alias lt="eza --tree --icons -a -I '.git|__pycache__|.mypy_cache|.ipynb_checkpoints'"
-# alias gs="git status"
+alias ll="eza -l -g -h --icons"
+alias lt="eza -T --icons"
+alias ls="eza --icons -1"
+alias gs="git status"
 
-# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-# [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
-
-# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-#[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+# show file previews for fzf using bat
+alias fp="fzf --preview 'bat --style=numbers --color=always --line-range :500 {}'"
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
