--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,22 +1,46 @@
-# add it as: ~/.tmux.conf
-# works on macs
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# action key
+#unbind C-b
+#set-option -g prefix C-t
+#set-option -g repeat-time 0
+#set-option -g focus-events on
+
+# resouce 
 unbind r
 bind r source-file ~/.tmux.conf
-# test
+
 set -g mouse on
 set-option -g status-position bottom
 # set -g @catppuccin_flavor 'frappe'
 
+# pane navigation
+# ===== Command+Option 窗格导航 （通过 iTerm2 发送 Ctrl+Option 序列） =====
+bind-key -n C-M-Right select-pane -R   # ⌘+⌥+Right → 向右窗格
+bind-key -n C-M-Left select-pane -L   # ⌘+⌥+Left  → 向左窗格
+bind-key -n C-M-Up select-pane -U   # ⌘+⌥+Up    → 向上窗格
+bind-key -n C-M-Down select-pane -D   # ⌘+⌥+Down  → 向下窗格
 
+# Moving window
+bind-key -n C-S-Left previous-window
+bind-key -n C-S-Right next-window
+# Notice: need setting in the iterms: keybindgs->send Hex code
+# control+shift+Left:0x1b 0x5b 0x31 0x3b 0x36 0x44
+# control+shift+Right:0x1b 0x5b 0x31 0x3b 0x36 0x43
 
 # copied from https://github.com/craftzdog/dotfiles-public/blob/master/.config/tmux/tmux.conf
 #### basic settings
 
 set-option -g status-justify "left"
 #set-option utf8-default on
+
 #set-option -g mouse-select-pane
-set-window-option -g mode-keys vi
+
+#### Key bindings
+#set-window-option -g mode-keys vi
+
+
 #set-window-option -g utf8 on
 # look'n feel
 set-option -g status-fg cyan
@@ -29,13 +53,13 @@ set-option -g history-limit 64096
 set -sg escape-time 10
 
 
+
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
 set -g set-titles-string "#T"
 
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
-
 source ~/.config/tmux/theme.conf
 source ~/.config/tmux/statusline.conf
 
